--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,10 @@
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    <link rel="icon"  type="image/png"    href="https://freepngimg.com/thumb/banana/26-banana-png-image-bananas-picture-download.png">
+    <!-- 缩写图标 favicon-->
+
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
